test/fail/issue1464b.mo
type Mean = ?Mean;
class Bar() = Self {
  public let mean : Mean = ?Self.mean;
};
Bar();
